--- a/app/globals.css
+++ b/app/globals.css
@@ -90,3 +90,15 @@ body {
     @apply bg-background text-foreground;
   }
 }
+
+@layer utilities {
+  .flex-center {
+    @apply flex items-center justify-center;
+  }
+  .container {
+    @apply flex justify-center h-screen mx-auto w-full;
+  }
+  .aside-bar {
+    @apply flex text-center flex-col justify-between items-center max-w-2xl p-2 my-2;
+  }
+}
